--- a/graphql-mercurius/graphql-project/package.json
+++ b/graphql-mercurius/graphql-project/package.json
@@ -32,9 +32,13 @@
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.8",
+    "@prisma/client": "^5.13.0",
     "@types/node": "^20.12.11",
     "eslint": "^9.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
+  },
+  "prisma": {
+    "seed": "ts-node ./prisma/seed/start.ts"
   }
 }
