--- a/graphql-mercurius/graphql-project/package.json
+++ b/graphql-mercurius/graphql-project/package.json
@@ -26,7 +26,9 @@
     "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
-    "graphql": "^16.8.1"
+    "graphql": "^16.8.1",
+    "nestjs-prisma": "^0.23.0",
+    "prisma-nestjs-graphql": "^20.0.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.2",
