--- a/graphql-mercurius/graphql-project/package.json
+++ b/graphql-mercurius/graphql-project/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@dbml/cli": "^3.4.3",
     "@nestjs/apollo": "^12.1.0",
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
