--- a/graphql-mercurius/graphql-project/package.json
+++ b/graphql-mercurius/graphql-project/package.json
@@ -37,6 +37,7 @@
     "@nestjs/testing": "^10.3.8",
     "@prisma/client": "^5.13.0",
     "@types/node": "^20.12.11",
+    "bcrypt": "^5.1.1",
     "eslint": "^9.2.0",
     "prisma-dbml-generator": "^0.12.0",
     "ts-node": "^10.9.2",
