--- a/graphql-mercurius/graphql-project/package.json
+++ b/graphql-mercurius/graphql-project/package.json
@@ -25,10 +25,12 @@
     "@nestjs/common": "^10.3.8",
     "@nestjs/core": "^10.3.8",
     "@nestjs/graphql": "^12.1.1",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
     "graphql": "^16.8.1",
     "nestjs-prisma": "^0.23.0",
+    "prisma-graphql-type-decimal": "^3.0.0",
     "prisma-nestjs-graphql": "^20.0.2"
   },
   "devDependencies": {
