--- a/graphql-mercurius/graphql-project/package.json
+++ b/graphql-mercurius/graphql-project/package.json
@@ -38,9 +38,11 @@
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.8",
     "@prisma/client": "^5.13.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.11",
     "bcrypt": "^5.1.1",
     "eslint": "^9.2.0",
+    "jest": "^29.7.0",
     "prisma-dbml-generator": "^0.12.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
