--- a/graphql-mercurius/graphql-project/tsconfig.json
+++ b/graphql-mercurius/graphql-project/tsconfig.json
@@ -13,5 +13,9 @@
     "incremental": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*"],
+  "types": [
+    "@types/node",
+    "@types/jest"
+   ]
 }
