--- a/graphql-mercurius/graphql-project/package.json
+++ b/graphql-mercurius/graphql-project/package.json
@@ -43,7 +43,9 @@
     "bcrypt": "^5.1.1",
     "eslint": "^9.2.0",
     "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "prisma-dbml-generator": "^0.12.0",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
