--- a/prisma-graphql/project/.gitignore
+++ b/prisma-graphql/project/.gitignore
@@ -1,26 +1,56 @@
-# Keep environment variables out of version control
-.env
-
-# dependencies
+# compiled output
+/dist
 /node_modules
+/build
 
-# IDE
-/.idea
-/.awcache
-/.vscode
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
 
-# misc
-npm-debug.log
+# OS
+.DS_Store
 
-# example
-/quick-start
-
-# tests
-/test
+# Tests
 /coverage
 /.nyc_output
 
-# dist
-/dist
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
 
-src/@generated
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# dotenv environment variable files
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# temp directory
+.temp
+.tmp
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Diagnostic reports (https://nodejs.org/api/report.html)
+report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
