--- a/prisma-graphql/project/package.json
+++ b/prisma-graphql/project/package.json
@@ -28,15 +28,15 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.14.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3",
-    "prisma": "^5.14.0",
-    "typegraphql-prisma": "^0.27.2"
+    "typegraphql-prisma": "^0.27.2",
+    "typescript": "^5.1.3"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -57,10 +57,10 @@
   },
   "dependencies": {
     "@nestjs/cli": "^10.3.2",
-    "@prisma/client": "^5.14.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^5.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   }
