--- a/nextjs-prisma-graphql-codegen-proj/Dockerfile
+++ b/nextjs-prisma-graphql-codegen-proj/Dockerfile
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye
+FROM mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm
 
 # [Optional] Uncomment this section to install additional OS packages.
 # RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
@@ -9,4 +9,4 @@ FROM mcr.microsoft.com/devcontainers/typescript-node:1-20-bullseye
 # RUN su node -c "source /usr/local/share/nvm/nvm.sh && nvm install ${EXTRA_NODE_VERSION}"
 
 # [Optional] Uncomment if you want to install more global node modules
-RUN su node -c "npm install -g npm@10.8.0"
+# RUN su node -c "npm install -g <your-package-list-here>"
