--- a/nextjs-prisma-graphql-codegen-proj/docker-compose.yml
+++ b/nextjs-prisma-graphql-codegen-proj/docker-compose.yml
@@ -2,15 +2,15 @@ version: '3'
 
 services:
   apps:
-    container_name: test_graphql_server-prisma-graphql
+    container_name: test_graphql_server-nextjs-prisma-graphql-codegen-proj
     build: 
       context: .
       dockerfile: Dockerfile
     tty: true
     volumes:
       - type: bind
-        source: ./project
-        target: /project
+        source: ./nextjs-prisma-graphql-codegen-sample
+        target: /nextjs-prisma-graphql-codegen-sample
 
       
     # Overrides default command so things don't shut down after the process ends.
@@ -24,22 +24,20 @@ services:
 
   db:
     image: mysql:8.0
-    container_name: mysql80-test_graphql_server-prisma-graphql
+    container_name: mysql80-test_graphql_server-nextjs-prisma-graphql-codegen-proj
     restart: always
     env_file:
       - mysql.env
     ports:
-      - 3310:3306
-    volumes:
-      - ./init_db:/docker-entrypoint-initdb.d
+      - 3313:3306
   phpmyadmin:
     image: phpmyadmin/phpmyadmin:latest
-    container_name: phpmyadmin-test_graphql_server-prisma-graphql
+    container_name: phpmyadmin-test_graphql_server-nextjs-prisma-graphql-codegen-proj
     restart: always
     depends_on:
       - db
     ports:
-      - 9094:80
+      - 9097:80
     volumes:
       - ./docker/phpmyadmin/sessions:/sessions
 # volumes:
