--- a/prisma-graphql/project/package.json
+++ b/prisma-graphql/project/package.json
@@ -29,6 +29,7 @@
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "prisma": "^5.14.0",
+    "prisma-docs-generator": "^0.8.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
@@ -36,7 +37,8 @@
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typegraphql-prisma": "^0.27.2",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "uuid": "^9.0.1"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -59,9 +61,11 @@
     "@nestjs/cli": "^10.3.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.14.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "typegraphql-nestjs": "^0.7.0"
   }
 }
