--- a/nextjs-prisma-graphql-codegen-proj/.devcontainer/devcontainer.json
+++ b/nextjs-prisma-graphql-codegen-proj/.devcontainer/devcontainer.json
@@ -1,28 +1,45 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-	"name": "test_graphql_server-nextjs-prisma-graphql-codegen-proj",
-	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-	"dockerComposeFile": "../docker-compose.yml",
-	"service": "apps",
-	"features": {
-		"ghcr.io/devcontainers-contrib/features/bash-command:1": {},
-		"ghcr.io/nils-geistmann/devcontainers-features/zsh:0": {}
-	},
+  "name": "test_graphql_server-nextjs-prisma-graphql-codegen-proj",
+  // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+  "dockerComposeFile": "../docker-compose.yml",
+  "service": "apps",
+  "features": {
+    "ghcr.io/devcontainers-contrib/features/bash-command:1": {},
+    "ghcr.io/nils-geistmann/devcontainers-features/zsh:0": {}
+  },
 
-	// Features to add to the dev container. More info: https://containers.dev/features.
-	// "features": {},
+  // Features to add to the dev container. More info: https://containers.dev/features.
+  // "features": {},
 
-	// Use 'forwardPorts' to make a list of ports inside the container available locally.
-	// "forwardPorts": [],
+  // Use 'forwardPorts' to make a list of ports inside the container available locally.
+  // "forwardPorts": [],
+  // "forwardPorts": [
+  //   3200
+  // ],
+  // "portsAttributes": {
+  //   "3200": {
+  //     "label": "Service A (Main)"
+  //   }
+  // },
+  // Use 'postCreateCommand' to run commands after the container is created.
+  // "postCreateCommand": "yarn install",
+  "postCreateCommand": "yarn install",
+  "workspaceFolder": "/nextjs-prisma-graphql-codegen-sample",
+  "customizations": {
+    "vscode": {
+      "extensions": [
+        "dbaeumer.vscode-eslint",
+        "bradlc.vscode-tailwindcss",
+        "Prisma.prisma",
+        "esbenp.prettier-vscode"
+      ]
+    }
+  }
+  // Configure tool-specific properties.
+  // "customizations": {},
 
-	// Use 'postCreateCommand' to run commands after the container is created.
-	// "postCreateCommand": "yarn install",
-	"postCreateCommand": "npm i",
-	"workspaceFolder": "/nextjs-prisma-graphql-codegen-sample",
-	// Configure tool-specific properties.
-	// "customizations": {},
-
-	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
-	// "remoteUser": "root"
+  // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+  // "remoteUser": "root"
 }
