--- a/nextjs-prisma-graphql-codegen-proj/Dockerfile
+++ b/nextjs-prisma-graphql-codegen-proj/Dockerfile
@@ -9,4 +9,5 @@ FROM mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm
 # RUN su node -c "source /usr/local/share/nvm/nvm.sh && nvm install ${EXTRA_NODE_VERSION}"
 
 # [Optional] Uncomment if you want to install more global node modules
-# RUN su node -c "npm install -g <your-package-list-here>"
+RUN su node -c "npm install -g npm@10.8.0"
+
