--- a/nextjs-prisma-graphql-codegen-proj/docker-compose.yml
+++ b/nextjs-prisma-graphql-codegen-proj/docker-compose.yml
@@ -6,18 +6,22 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+    # ports:
+    #   - 3200:4200
     tty: true
     volumes:
       - type: bind
         source: ./nextjs-prisma-graphql-codegen-sample
         target: /nextjs-prisma-graphql-codegen-sample
+    # environment:
+    #   - WATCHPACK_POLLING=true
 
-      
+
     # Overrides default command so things don't shut down after the process ends.
     command: sleep infinity
-
+    #network_mode: 'host'
     # Runs app on the same network as the database container, allows "forwardPorts" in devcontainer.json function.
-    network_mode: service:db
+    #network_mode: service:db
 
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
     # (Adding the "ports" property to this file will not forward from a Codespace.)
