--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/.eslintrc.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/.eslintrc.json
@@ -1,3 +1,12 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["prettier","next/core-web-vitals"],
+  "plugins": ["@typescript-eslint", "simple-import-sort", "import"],
+  "rules": {
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
+    "import/first": "error",
+    "import/newline-after-import": "error",
+    "import/no-duplicates": "error",
+    "@typescript-eslint/consistent-type-imports": "error"
+  }
 }
