--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -6,7 +6,14 @@
     "dev": "next dev -p 4200",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "run-p -l -c --aggregate-output lint:*",
+    "lint:eslint": "next lint",
+    "lint:prettier": "prettier --check .",
+    "format": "run-s format:prettier format:eslint",
+    "format:eslint": "yarn lint:eslint --fix",
+    "format:prettier": "yarn lint:prettier --fix",
+    
+    
   },
   "dependencies": {
     "next": "14.2.3",
