--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -11,9 +11,8 @@
     "lint:prettier": "prettier --check .",
     "format": "run-s format:prettier format:eslint",
     "format:eslint": "yarn lint:eslint --fix",
-    "format:prettier": "yarn lint:prettier --fix",
-    
-    
+    "format:prettier": "yarn lint:prettier --write",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "next": "14.2.3",
