--- a/nextjs-prisma-graphql-codegen-proj/.devcontainer/devcontainer.json
+++ b/nextjs-prisma-graphql-codegen-proj/.devcontainer/devcontainer.json
@@ -15,9 +15,9 @@
 
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
-  // "forwardPorts": [
-  //   3200
-  // ],
+  "forwardPorts": [
+    "3200:4200"
+  ],
   // "portsAttributes": {
   //   "3200": {
   //     "label": "Service A (Main)"
