--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -15,8 +15,10 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@prisma/client": "5.14.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.14.0",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
