--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -19,6 +19,7 @@
     "@prisma/client": "^5.14.0",
     "@vercel/postgres": "^0.8.0",
     "mysql2": "^3.9.8",
+    "bcrypt": "^5.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
