--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -19,7 +19,6 @@
     "@prisma/client": "^5.14.0",
     "@vercel/postgres": "^0.8.0",
     "mysql2": "^3.9.8",
-    "bcrypt": "^5.1.1",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
     "react": "^18",
@@ -32,6 +31,7 @@
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^7.10.0",
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "eslint-config-prettier": "^9.1.0",
