--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -15,9 +15,16 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@graphql-tools/graphql-file-loader": "^8.0.1",
+    "@graphql-tools/load": "^8.0.2",
+    "@graphql-tools/schema": "^10.0.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.14.0",
     "@vercel/postgres": "^0.8.0",
+    "apollo-server-micro": "^3.13.0",
+    "graphql": "^16.8.1",
+    "micro": "^10.0.1",
+    "micro-cors": "^0.1.1",
     "mysql2": "^3.9.8",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.18",
