--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -15,13 +15,13 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
     "@graphql-tools/graphql-file-loader": "^8.0.1",
     "@graphql-tools/load": "^8.0.2",
     "@graphql-tools/schema": "^10.0.4",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.14.0",
     "@vercel/postgres": "^0.8.0",
-    "apollo-server-micro": "^3.13.0",
     "graphql": "^16.8.1",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
