--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -51,5 +51,8 @@
     "prisma": "^5.14.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
+  },
+  "resolutions": {
+    "jackspeak": "3.1.2"
   }
 }
