--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
@@ -12,3 +12,9 @@ generates:
       - typescript-resolvers
     config:
       contextType: 'src/graphql/context#Context'
+      mapperTypSuffix: Model
+      mappers:
+        User: '@prisma/client#User'
+        Article: '@prisma/client#Article'
+      scalers:
+        DateTime: string
