--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@graphql-codegen/cli": "^5.0.2",
+    "@graphql-codegen/typescript-resolvers": "^4.1.0",
     "@graphql-tools/graphql-file-loader": "^8.0.1",
     "@graphql-tools/load": "^8.0.2",
     "@graphql-tools/schema": "^10.0.4",
