--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -25,6 +25,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.14.0",
     "@vercel/postgres": "^0.8.0",
+    "apollo-server": "^3.13.0",
     "graphql": "^16.8.1",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
