--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@apollo/server": "^4.10.4",
+    "@as-integrations/next": "^3.0.0",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript-resolvers": "^4.1.0",
     "@graphql-tools/graphql-file-loader": "^8.0.1",
