--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -35,7 +35,7 @@
     "micro-cors": "^0.1.1",
     "mysql2": "^3.9.8",
     "next": "14.2.3",
-    "next-auth": "^5.0.0-beta.18",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
