--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
@@ -1,32 +1,32 @@
-generates:
-  src/generated/schema.graphql:
-    schema:
-      - 'src/graphql/typeDefs/**/*.graphql'
-    plugins:
-      - schema-ast
-  src/generated/resolvers-types.ts:
-    schema:
-      - 'src/graphql/typeDefs/**/*.graphql'
-    plugins:
-      - typescript
-      - typescript-resolvers
-    config:
-      contextType: 'src/graphql/context#Context'
-      mapperTypSuffix: Model
-      mappers:
-        User: '@prisma/client#User'
-        Article: '@prisma/client#Article'
-      scalers:
-        DateTime: string
-  src/generated/request.ts:
-    schema:
-      - 'src/graphql/typeDefs/**/*.graphql'
-    documents:
-      - 'src/graphql/typeDefs/**/*.graphql'
-    plugins:
-      - typescript
-      - typescript-operations
-      - typescript-react-apollo
-    config:
-      scalars:
-        DateTime: string
+# generates:
+#   src/generated/schema.graphql:
+#     schema:
+#       - 'src/graphql/typeDefs/**/*.graphql'
+#     plugins:
+#       - schema-ast
+#   src/generated/resolvers-types.ts:
+#     schema:
+#       - 'src/graphql/typeDefs/**/*.graphql'
+#     plugins:
+#       - typescript
+#       - typescript-resolvers
+#     config:
+#       contextType: 'src/graphql/context#Context'
+#       mapperTypSuffix: Model
+#       mappers:
+#         User: '@prisma/client#User'
+#         Article: '@prisma/client#Article'
+#       scalers:
+#         DateTime: string
+#   src/generated/request.ts:
+#     schema:
+#       - 'src/graphql/typeDefs/**/*.graphql'
+#     documents:
+#       - 'src/graphql/typeDefs/**/*.graphql'
+#     plugins:
+#       - typescript
+#       - typescript-operations
+#       - typescript-react-apollo
+#     config:
+#       scalars:
+#         DateTime: string
