--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -14,10 +14,12 @@
     "format:prettier": "yarn lint:prettier --write",
     "typecheck": "tsc",
     "codegen": "graphql-codegen",
-    "codegents": "graphql-codegen --config codegen.ts"
+    "codegents": "graphql-codegen --config codegen.ts",
+    "codegenyml": "graphql-codegen --config codegen-client.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.10.4",
+    "@apollo/experimental-nextjs-app-support": "^0.11.2",
     "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
     "@graphql-codegen/cli": "^5.0.2",
@@ -43,6 +45,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/client-preset": "^4.2.6",
+    "@graphql-codegen/typescript-graphql-request": "^6.2.0",
     "@types/micro-cors": "^0.1.5",
     "@types/node": "^20",
     "@types/react": "^18",
