--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
@@ -1,3 +1,11 @@
+schema: ./src/generated/schema.graphql
+documents: ./src/graphql/query/*.graphql
+generates:
+  ./src/graphql/dist/client.ts:
+    plugins:
+      - typescript
+      - typescript-operations
+      - typescript-graphql-request
 # generates:
 #   src/generated/schema.graphql:
 #     schema:
