--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -133,3 +132,6 @@ graphql-mercurius/mysql.env
 graphql-mercurius/docker
 prisma-graphql/docker
 prisma-graphql/mysql.env
+
+
+apolloserver/**/dist
