--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/codegen.yml
@@ -16,7 +16,7 @@ generates:
       - typescript-resolvers
     config:
       contextType: 'src/graphql/context#Context'
-      mapperTypSuffix: Model
+      mapperTypeSuffix: Model
       mappers:
         User: '@prisma/client#User'
         Article: '@prisma/client#Article'
@@ -24,7 +24,7 @@ generates:
         DateTime: string
     # config:
     #   contextType: './src/graphql/context#Context'
-    #   mapperTypSuffix: Model
+    #   mapperTypeSuffix: Model
     #   mappers:
     #     User: '@prisma/client#User'
     #     Article: '@prisma/client#Article'
