--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -29,7 +29,7 @@
     "@graphql-tools/load": "^8.0.2",
     "@graphql-tools/schema": "^10.0.4",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.15.1",
     "@vercel/postgres": "^0.8.0",
     "apollo-server": "^3.13.0",
     "graphql": "^16.8.1",
@@ -40,6 +40,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "ts-node": "^10.9.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
