--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -19,6 +19,7 @@
     "@apollo/client": "^3.10.4",
     "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
+    "@auth/prisma-adapter": "^2.4.1",
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/typescript-operations": "^4.2.1",
     "@graphql-codegen/typescript-react-apollo": "^4.3.0",
@@ -26,7 +27,7 @@
     "@graphql-tools/graphql-file-loader": "^8.0.1",
     "@graphql-tools/load": "^8.0.2",
     "@graphql-tools/schema": "^10.0.4",
-    "@prisma/client": "^5.14.0",
+    "@prisma/client": "^5.15.1",
     "@vercel/postgres": "^0.8.0",
     "apollo-server": "^3.13.0",
     "graphql": "^16.8.1",
