--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -28,6 +28,7 @@
     "@graphql-tools/load": "^8.0.2",
     "@graphql-tools/schema": "^10.0.4",
     "@prisma/client": "^5.15.1",
+    "@types/bcrypt": "^5.0.2",
     "@vercel/postgres": "^0.8.0",
     "apollo-server": "^3.13.0",
     "graphql": "^16.8.1",
