--- a/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
+++ b/nextjs-prisma-graphql-codegen-proj/nextjs-prisma-graphql-codegen-sample/package.json
@@ -33,6 +33,7 @@
     "@prisma/client": "^5.15.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-email/components": "^0.0.21",
     "@types/bcrypt": "^5.0.2",
@@ -41,6 +42,7 @@
     "bcrypt-ts": "^5.0.2",
     "class-variance-authority": "^0.7.0",
     "graphql": "^16.8.1",
+    "lucide-react": "^0.400.0",
     "micro": "^10.0.1",
     "micro-cors": "^0.1.1",
     "mysql2": "^3.9.8",
@@ -49,6 +51,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
+    "resend": "^3.4.0",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
     "ts-node": "^10.9.2",
